Add Git hook to auto-update submodules

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lint-ci": "./scripts/circleci/analyze_code.sh && yarn shellcheck",
     "lint-java": "node ./scripts/lint-java.js",
     "lint": "eslint .",
+    "postinstall": "path-exists ./.git && git config core.hooksPath ./scripts/git-hooks",
     "prettier": "prettier --write \"./**/*.{js,md,yml,ts,tsx}\"",
     "print-packages": "node ./scripts/monorepo/print",
     "shellcheck": "./scripts/circleci/analyze_scripts.sh",
@@ -100,6 +101,7 @@
     "mkdirp": "^0.5.1",
     "node-fetch": "^2.2.0",
     "nullthrows": "^1.1.1",
+    "path-exists-cli": "^2.0.0",
     "prettier": "2.8.8",
     "prettier-plugin-hermes-parser": "0.20.1",
     "react": "18.2.0",
