Add script to update Hermes submodule

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "test-typescript": "dtslint packages/react-native/types",
     "test": "jest",
     "trigger-react-native-release": "node ./scripts/releases-local/trigger-react-native-release.js",
+    "update-hermes": "node ./scripts/update-hermes.js",
     "update-lock": "npx yarn-deduplicate"
   },
   "workspaces": [
